--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "immusen/yii2-swoole-mqtt",
     "description": "MQTT server for Yii2 base on swoole 4, Resolve topic as a route reflect into controller/action/param, And support redis pub/sub to trigger async task from your web application",
     "type": "yii2-extension",
-    "keywords": ["yii2","extension","swoole","mqtt","mqtt server","redis","IOT"],
+    "keywords": ["yii2","extension","swoole","mqtt","mqtt server","redis","IOT", "async", "pub sub"],
     "license": "Apache-2.0",
     "authors": [
         {
